--- a/templates/machineslist.html
+++ b/templates/machineslist.html
@@ -70,12 +70,12 @@
           <a id="tab_modal"  class="nav-link active" aria-current="page" onclick="changeTab('modal')" >Modal Viewer 3D</a>
         </li>
         <li class="nav-item">
-          <a id="tab_list" class="nav-link" onclick="changeTab('list')">User List</a>
+          <a id="tab_list" class="nav-link" onclick="changeTab('list')">Machine List</a>
         </li>
       </ul>
    </nav>
  <div id="user_list_container" class="d-none">
-    <h2>Users List</h2>
+    <h2>Machine List</h2>
 <a class="btn btn-primary" href="add">Add New Machine</a>
 
 <table class="table">
